# fomorian-community

./: .gitignore  COMPARISON.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SIEM-IMPORT-GUIDE.md  WAZUH-INTEGRATION.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
attacks/command-and-control/T1071.001-http-c2/: README.md
attacks/credential-access/T1003.001-lsass-memory/: README.md
attacks/credential-access/T1003.006-dcsync/: README.md
attacks/credential-access/T1558.003-kerberoasting/: README.md
attacks/defense-evasion/T1036.003-masquerading/: README.md
attacks/defense-evasion/T1055.001-dll-injection/: README.md
attacks/defense-evasion/T1070.001-clear-windows-logs/: README.md
attacks/defense-evasion/T1562.001-disable-security-tools/: README.md
engagements/ransomware/: README.md
generator/: __init__.py  __main__.py  cli.py
generator/builder/: __init__.py  guid_registry.py  scenario_builder.py  timestamp_gen.py
generator/config/: __init__.py  defaults.py  loader.py  models.py
generator/injectors/: __init__.py  base.py  wazuh.py
generator/preflight/: __init__.py  checker.py  models.py
generator/random/: __init__.py  generator.py  names.py  profiles.py
generator/templating/: __init__.py  engine.py  library.py
generator/wazuh/: __init__.py  connector.py  detector.py  validator.py
generator/wizard/: __init__.py  navigator.py  runner.py  state.py
generator/wizard/steps/: base.py  (+11 more)
profiles/test-config/: attack_path.yaml  environment.yaml  timing.yaml
scripts/: convert-to-ndjson.py  inject-logs.sh
sigma-rules/: batch1-coverage-sigma.js  batch2-coverage-sigma.js  batch3-coverage-sigma.js  deploy-to-graylog.py
sigma-rules/command-and-control/: encrypted_c2_nonstandard_port.yml  web_service_c2.yml
sigma-rules/defense-evasion/: clear_command_history.yml  file_deletion_evidence_removal.yml  masquerading_system_binary.yml  sandbox_vm_evasion.yml
sigma-rules/discovery/: domain_account_discovery.yml  network_service_discovery_nmap.yml  system_service_discovery_sc.yml  system_time_discovery.yml
sigma-rules/office365/: README.md  o365_audit_logging_disabled.yml  o365_bulk_email_access.yml  o365_delegated_permission_grant.yml  o365_email_forwarding_external.yml  o365_foreign_ip_signin.yml  o365_gal_enumeration.yml  o365_impossible_travel.yml  o365_inbox_rule_creation.yml  o365_mailbox_search.yml  o365_oauth_consent_phishing.yml  o365_security_alert_deletion.yml  o365_wire_fraud_email.yml
templates/: sysmon-events.json  windows-security.json
(+149 files in other folders)
